Create SkillController update method
