# app/Http/Controllers/SkillController.php
@@ -117,9 +117,52 @@ class SkillController extends Controller
      * @param  int  $id
      * @return \Illuminate\Http\Response
      */
-    public function update(Request $request, $id)
+    #[OAT\Post(
+        tags: ['skills'],
+        path: '/api/skills/{skill_uuid}',
+        summary: 'Update a skill',
+        operationId: 'SkillController.update',
+        security: [['BearerToken' => []]],
+        parameters: [
+            new OAT\Parameter(
+                name: 'skill_uuid',
+                in: 'path',
+                required: true
+            )
+        ],
+        requestBody: new OAT\RequestBody(
+            required: true,
+            content: new OAT\JsonContent(ref: '#/components/schemas/UpdateSkillRequest')
+        ),
+        responses: [
+            new OAT\Response(
+                response: HttpResponse::HTTP_OK,
+                description: 'Ok',
+                content: new OAT\JsonContent(ref: '#/components/schemas/SkillResource') 
+            ),
+            new OAT\Response(
+                response: HttpResponse::HTTP_UNAUTHORIZED,
+                description: 'Unauthorized',
+                content: new OAT\JsonContent(
+                    properties: [
+                        new OAT\Property(
+                            property: 'message',
+                            type: 'string',
+                            example: 'Invalid credentials.'
+                        ),
+                    ]
+                )
+            ),
+        ]
+    )]
+    public function update(UpdateSkillRequest $request, Skill $skill)
     {
-        //
+        $validated = $request->safe()->only(['name', 'description']);
+        $skill->name = $validated['name'];
+        $skill->description = $validated['description'];
+        $skill->save();
+
+        return Response::json(new SkillResource($skill));
     }
 
     /**
